Changes since version 2.1.0
---------------------------

- A race condition with Glacier2 detaching the request handler thread
  has been fixed.

- Ice::ObjectNotExistException are now retried for invocations made on
  indirect proxies. This allows to transparently migrate objects or
  objects adapters.

- Fixed bug where data transfer statistics were not being reported on
  outgoing datagram requests.

- Fixed bug where the IcePack node with a collocated registry wouldn't
  terminate after the admin "shutdown" command.

- The Windows demo/IcePatch2/MFC example displays an error dialog when
  the patch client is run without the --IcePatch2.Endpoints option.

Changes since version 2.0.0
---------------------------

- Fixed bug in the code generators for C# and VB: for sequences
  of structs and sequences of Object*, incorrect code was generated
  if a ["cs:collection"] or ["vb:collection"] metadata directive
  was used.

- We do not retry oneway or batch oneway requests anymore, except if
  there are problems during connection establishment. If we retry a
  oneway or batch oneway, previous oneways from the same batch, or
  previous oneways that are buffered by the IP stack implementation,
  are silently thrown away. This can lead to a situation where the
  latest oneway succeeds due to retry, but former oneways are
  discarded.

- Fixed race between connection validation and activation for UDP
  endpoints in thread-per-connection mode.

- Fixed a deadlock that could occur if a server cannot send data
  during connection validation.

- Glacier2 could hang if a server is not running. This has been fixed.

- Added support for g++ builds on Solaris.

- Fixed IcePack node and registry database environment names. They
  have been changed to be the name of the node for IcePack nodes and
  'Registry' for the IcePack registry. This means that you can now
  configure the database environment using the properties prefixed